@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018-2022 "Graph Foundation,"
+ * Copyright (c) "Graph Foundation,"
  * Graph Foundation, Inc. [https://graphfoundation.org]
  *
  * This file is part of ONgDB.
@@ -18,7 +18,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 /*
- * Copyright (c) 2002-2020 "Neo4j,"
+ * Copyright (c) "Neo4j"
  * Neo4j Sweden AB [http://neo4j.com]
  *
  * This file is part of Neo4j.
@@ -38,38 +38,36 @@
  */
 package org.neo4j.kernel.impl.locking;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Set;
 
-import org.neo4j.helpers.collection.Iterables;
-import org.neo4j.internal.kernel.api.IndexQuery.ExactPredicate;
+import org.neo4j.internal.helpers.collection.Iterables;
+import org.neo4j.internal.kernel.api.PropertyIndexQuery.ExactPredicate;
 import org.neo4j.values.storable.Value;
 import org.neo4j.values.storable.Values;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.equalTo;
-import static org.neo4j.helpers.collection.Iterators.array;
-import static org.neo4j.internal.kernel.api.IndexQuery.exact;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.neo4j.internal.helpers.collection.Iterators.array;
+import static org.neo4j.internal.kernel.api.PropertyIndexQuery.exact;
 
 public class IndexEntryResourceTypesTest
 {
-
-    public static final int labelId = 1;
-    public static final int propertyId = 2;
-    public static final Value value = Values.of( "value" );
+    private static final int labelId = 1;
+    private static final int propertyId = 2;
+    private static final Value value = Values.of( "value" );
 
     @Test
-    public void shouldProduceBackwardsCompatibleId()
+    void shouldProduceBackwardsCompatibleId()
     {
-        long id = ResourceTypes.indexEntryResourceId( labelId, exact( propertyId, value ) );
-        assertThat( id, equalTo( 155667838465249649L ) );
+        long id = ResourceIds.indexEntryResourceId( labelId, exact( propertyId, value ) );
+        assertThat( id ).isEqualTo( 6676982443481287192L );
     }
 
     @Test
-    public void shouldDifferentiateBetweenIndexes()
+    void shouldDifferentiateBetweenIndexes()
     {
         ExactPredicate pred1 = exact( 1, "value" );
         ExactPredicate pred2 = exact( 1, "value2" );
@@ -77,29 +75,23 @@ public class IndexEntryResourceTypesTest
         ExactPredicate pred4 = exact( 2, "value2" );
 
         List<Long> ids = Arrays.asList(
-                ResourceTypes.indexEntryResourceId( 1, array( pred1 ) ),
-                ResourceTypes.indexEntryResourceId( 1, array( pred2 ) ),
-                ResourceTypes.indexEntryResourceId( 1, array( pred3 ) ),
-                ResourceTypes.indexEntryResourceId( 1, array( pred4 ) ),
-                ResourceTypes.indexEntryResourceId( 2, array( pred1 ) ),
-                ResourceTypes.indexEntryResourceId( 1, array( pred1, pred2 ) ),
-                ResourceTypes.indexEntryResourceId( 1, array( pred1, pred2, pred3 ) ),
-                ResourceTypes.indexEntryResourceId( 2, array( pred1, pred2, pred3, pred4 ) ) );
+                ResourceIds.indexEntryResourceId( 1, array( pred1 ) ),
+                ResourceIds.indexEntryResourceId( 1, array( pred2 ) ),
+                ResourceIds.indexEntryResourceId( 1, array( pred3 ) ),
+                ResourceIds.indexEntryResourceId( 1, array( pred4 ) ),
+                ResourceIds.indexEntryResourceId( 2, array( pred1 ) ),
+                ResourceIds.indexEntryResourceId( 1, array( pred1, pred2 ) ),
+                ResourceIds.indexEntryResourceId( 1, array( pred1, pred2, pred3 ) ),
+                ResourceIds.indexEntryResourceId( 2, array( pred1, pred2, pred3, pred4 ) ) );
 
         Set<Long> uniqueIds = Iterables.asSet( ids );
-        assertThat( ids.size(), equalTo( uniqueIds.size() ) );
+        assertThat( ids.size() ).isEqualTo( uniqueIds.size() );
     }
 
     @Test
-    public void mustBeAbleToHashAllTypesWith220HashFunction()
+    void mustBeAbleToHashAllTypesWith4xHashFunction()
     {
-        verifyCanHashAllTypes( ResourceTypes::indexEntryResourceId_2_2_0 );
-    }
-
-    @Test
-    public void mustBeAbleToHashAllTypesWith4xHashFunction()
-    {
-        verifyCanHashAllTypes( ResourceTypes::indexEntryResourceId_4_x );
+        verifyCanHashAllTypes( ResourceIds::indexEntryResourceId_4_x );
     }
 
     private interface IndexEntryHasher
@@ -107,8 +99,8 @@ public class IndexEntryResourceTypesTest
         long hash( long labelId, ExactPredicate[] predicates );
     }
 
-    @SuppressWarnings( {"UnnecessaryBoxing", "BooleanConstructorCall"} )
-    private void verifyCanHashAllTypes( IndexEntryHasher hasher )
+    @SuppressWarnings( {"UnnecessaryBoxing"} )
+    private static void verifyCanHashAllTypes( IndexEntryHasher hasher )
     {
         hasher.hash( 42, array( exact( 1, "" ) ) );
         hasher.hash( 42, array( exact( 1, "a" ) ) );
@@ -120,7 +112,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new boolean[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new boolean[]{true} ) ) );
         hasher.hash( 42, array( exact( 1, new boolean[]{true, false} ) ) );
-        hasher.hash( 42, array( exact( 1, new Boolean( true ) ) ) );
+        hasher.hash( 42, array( exact( 1, Boolean.valueOf( true ) ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{true} ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{true, false} ) ) );
@@ -128,7 +120,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new byte[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new byte[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new byte[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, Byte.valueOf( (byte) 1  ) ) ) );
+        hasher.hash( 42, array( exact( 1, Byte.valueOf( (byte) 1 ) ) ) );
         hasher.hash( 42, array( exact( 1, new Byte[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Byte[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new Byte[]{1, 2} ) ) );
@@ -144,7 +136,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new char[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new char[]{'a'} ) ) );
         hasher.hash( 42, array( exact( 1, new char[]{'a', 'b'} ) ) );
-        hasher.hash( 42, array( exact( 1, new Character( 'a' ) ) ) );
+        hasher.hash( 42, array( exact( 1, Character.valueOf( 'a' ) ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{'a'} ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{'a', 'b'} ) ) );
@@ -152,7 +144,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new float[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new float[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new float[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, new Float( (float) 1 ) ) ) );
+        hasher.hash( 42, array( exact( 1, Float.valueOf( 1 ) ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{1.0f} ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{1.0f, 2.0f} ) ) );
@@ -176,7 +168,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new double[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new double[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new double[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, new Double( 1.0 ) ) ) );
+        hasher.hash( 42, array( exact( 1, Double.valueOf( 1.0 ) ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{1.0} ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{1.0, 2.0} ) ) );
@@ -191,7 +183,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new boolean[]{} ), exact( ~1, new boolean[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new boolean[]{true} ), exact( ~1, new boolean[]{true} ) ) );
         hasher.hash( 42, array( exact( 1, new boolean[]{true, false} ), exact( ~1, new boolean[]{true, false} ) ) );
-        hasher.hash( 42, array( exact( 1, new Boolean( true ) ), exact( ~1, new Boolean( true ) ) ) );
+        hasher.hash( 42, array( exact( 1, Boolean.valueOf( true ) ), exact( ~1, Boolean.valueOf( true ) ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{} ), exact( ~1, new Boolean[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{true} ), exact( ~1, new Boolean[]{true} ) ) );
         hasher.hash( 42, array( exact( 1, new Boolean[]{true, false} ), exact( ~1, new Boolean[]{true, false} ) ) );
@@ -215,7 +207,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new char[]{} ), exact( ~1, new char[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new char[]{'a'} ), exact( ~1, new char[]{'a'} ) ) );
         hasher.hash( 42, array( exact( 1, new char[]{'a', 'b'} ), exact( ~1, new char[]{'a', 'b'} ) ) );
-        hasher.hash( 42, array( exact( 1, new Character( 'a' ) ), exact( ~1, new Character( 'a' ) ) ) );
+        hasher.hash( 42, array( exact( 1, Character.valueOf( 'a' ) ), exact( ~1, Character.valueOf( 'a' ) ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{} ), exact( ~1, new Character[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{'a'} ), exact( ~1, new Character[]{'a'} ) ) );
         hasher.hash( 42, array( exact( 1, new Character[]{'a', 'b'} ), exact( ~1, new Character[]{'a', 'b'} ) ) );
@@ -223,7 +215,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new float[]{} ), exact( ~1, new float[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new float[]{1} ), exact( ~1, new float[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new float[]{1, 2} ), exact( ~1, new float[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, new Float( (float) 1 ) ), exact( ~1, new Float( (float) 1 ) ) ) );
+        hasher.hash( 42, array( exact( 1, Float.valueOf( 1 ) ), exact( ~1, Float.valueOf( 1 ) ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{} ), exact( ~1, new Float[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{1.0f} ), exact( ~1, new Float[]{1.0f} ) ) );
         hasher.hash( 42, array( exact( 1, new Float[]{1.0f, 2.0f} ), exact( ~1, new Float[]{1.0f, 2.0f} ) ) );
@@ -247,7 +239,7 @@ public class IndexEntryResourceTypesTest
         hasher.hash( 42, array( exact( 1, new double[]{} ), exact( ~1, new double[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new double[]{1} ), exact( ~1, new double[]{1} ) ) );
         hasher.hash( 42, array( exact( 1, new double[]{1, 2} ), exact( ~1, new double[]{1, 2} ) ) );
-        hasher.hash( 42, array( exact( 1, new Double( 1.0 ) ), exact( ~1, new Double( 1.0 ) ) ) );
+        hasher.hash( 42, array( exact( 1, Double.valueOf( 1.0 ) ), exact( ~1, Double.valueOf( 1.0 ) ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{} ), exact( ~1, new Double[]{} ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{1.0} ), exact( ~1, new Double[]{1.0} ) ) );
         hasher.hash( 42, array( exact( 1, new Double[]{1.0, 2.0} ), exact( ~1, new Double[]{1.0, 2.0} ) ) );
