@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2018-2022 "Graph Foundation,"
+ * Copyright (c) "Graph Foundation,"
  * Graph Foundation, Inc. [https://graphfoundation.org]
  *
  * This file is part of ONgDB.
@@ -18,7 +18,7 @@
  * along with this program.  If not, see <http://www.gnu.org/licenses/>.
  */
 /*
- * Copyright (c) 2002-2020 "Neo4j,"
+ * Copyright (c) "Neo4j"
  * Neo4j Sweden AB [http://neo4j.com]
  *
  * This file is part of Neo4j.
@@ -38,50 +38,47 @@
  */
 package org.neo4j.values.storable;
 
-import org.apache.commons.codec.digest.DigestUtils;
-import org.junit.Test;
+import static org.assertj.core.api.Assertions.assertThat;
+import static org.junit.jupiter.api.Assertions.fail;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.time.ZoneId;
+import org.apache.commons.codec.digest.DigestUtils;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.greaterThanOrEqualTo;
-import static org.junit.Assert.assertThat;
-import static org.junit.Assert.fail;
-
-public class TimeZonesTest
+class TimeZonesTest
 {
     @Test
-    public void weSupportAllJavaZoneIds()
+    void weSupportAllJavaZoneIds()
     {
         ZoneId.getAvailableZoneIds().forEach( s ->
         {
             short num = TimeZones.map( s );
-            assertThat( "Our time zone table does not have a mapping for " + s, num, greaterThanOrEqualTo( (short) 0 ) );
+            assertThat( num ).as( "Our time zone table does not have a mapping for " + s ).isGreaterThanOrEqualTo( (short) 0 );
 
             String nameFromTable = TimeZones.map( num );
             if ( !s.equals( nameFromTable ) )
             {
                 // The test is running on an older Java version and `s` has been removed since, thus it points to a different zone now.
                 // That zone should point to itself, however.
-                assertThat( "Our time zone table has inconsistent mapping for " + nameFromTable,
-                        TimeZones.map( TimeZones.map( nameFromTable ) ), equalTo( nameFromTable ) );
+                assertThat( TimeZones.map( TimeZones.map( nameFromTable ) ) ).as(
+                        "Our time zone table has inconsistent mapping for " + nameFromTable ).isEqualTo( nameFromTable );
             }
         } );
     }
 
     @Test
-    public void weSupportDeletedZoneIdEastSaskatchewan()
+    void weSupportDeletedZoneIdEastSaskatchewan()
     {
         try
         {
             short eastSaskatchewan = TimeZones.map( "Canada/East-Saskatchewan" );
-            assertThat( "Our time zone table does not remap Canada/East-Saskatchewan to Canada/Saskatchewan",
-                    TimeZones.map( eastSaskatchewan ), equalTo( "Canada/Saskatchewan" ) );
+            assertThat( TimeZones.map( eastSaskatchewan ) ).as(
+                    "Our time zone table does not remap Canada/East-Saskatchewan to Canada/Saskatchewan" ).isEqualTo( "Canada/Saskatchewan" );
         }
         catch ( IllegalArgumentException e )
         {
@@ -89,20 +86,60 @@ public class TimeZonesTest
         }
     }
 
+    @Test
+    void weSupportDeletedZoneIdUSPacificNew()
+    {
+        try
+        {
+            short pacificNew = TimeZones.map( "US/Pacific-New" );
+            assertThat( TimeZones.map( pacificNew ) ).as(
+                    "Our time zone table does not remap US/Pacific-New to US/Pacific" ).isEqualTo( "US/Pacific" );
+        }
+        catch ( IllegalArgumentException e )
+        {
+            fail( "Our time zone table does not support US/Pacific-New" );
+        }
+    }
+
+    @Test
+    void weSupportDeletedZoneIdUSPacificNewForDeserialization()
+    {
+        try
+        {
+            short pacificNew = 58; // Old timezone id for US/Pacific-New
+            assertThat( TimeZones.map( pacificNew ) ).as(
+                    "Our time zone table does not remap US/Pacific-New to US/Pacific" ).isEqualTo( "US/Pacific" );
+        }
+        catch ( IllegalArgumentException e )
+        {
+            fail( "Our time zone table does not support US/Pacific-New" );
+        }
+    }
+
     /**
-     * If this test fails, you have changed something in TZIDS. This is fine, as long as you only append lines to the end,
-     * or add a mapping to a deleted timezone. You are not allowed to change the order of lines or remove a line.
-     * p>
-     * If your changes were legit, please change the expected byte[] below.
+     * If this test fails, you have changed something in TZIDS. This is fine, as long as you only append lines to the end, or add a mapping to a deleted
+     * timezone. You are not allowed to change the order of lines or remove a line. p> If your changes were legit, please change the expected byte[] below.
      */
     @Test
-    public void tzidsOrderMustNotChange() throws URISyntaxException, IOException
+    void tzidsOrderMustNotChange() throws URISyntaxException, IOException
     {
-        Path path = Paths.get( TimeZones.class.getResource( "/TZIDS" ).toURI() );
-        byte[] timeZonesInfo = Files.readAllBytes( path );
+        Path path = Path.of( TimeZones.class.getResource( "/TZIDS" ).toURI() );
+        String timeZonesInfo = Files.readString( path ).replace( "\r\n", "\n" );
         byte[] timeZonesHash = DigestUtils.sha256( timeZonesInfo );
-        assertThat( timeZonesHash, equalTo(
-                new byte[]{49, -67, -18, -59, -6, -102, -16, -13, 35, 37, -37, 65, 80, 6, 77, -84, -12, -117, -54, -105, 36, 18, -119, -73, 92, 37, -64, 96,
-                        66, -52, 48, 51} ) );
+        assertThat( timeZonesHash ).isEqualTo(
+                new byte[]{92, 26, -114, 87, 84, -74, 57, 107, -126, -30, -111, 79, -11, 20, -3, 69, -69, -75, 72, 59, 33, 30, 21, -17,
+            -55, 2, 109, -102, 92, -128, -120, -38} );
+    }
+
+    @Disabled( "Too restrictive as-is: Zone IDs aren't stable across JDKs, 'Pacific/Kanton' isn't currently supported by x86-ubuntu-oraclejdk-17" )
+    @Test
+    void allTimeZonesAreValidZoneIDs()
+    {
+        TimeZones.supportedTimeZones().forEach( timeZone ->
+        {
+            short zoneOffset = TimeZones.map( timeZone );
+            String timeZone2 = TimeZones.map( zoneOffset );
+            assertThat( ZoneId.of( timeZone2 ) ).isNotNull();
+        });
     }
 }
